--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>fi-ko</title>
   <link rel="icon" type="image/png" href="/images/favicon.png"/>
+  <link rel="stylesheet" type="text/css" href="/styles.css"/>
 </head>
 
 <body>
